changed garbage collector to concurrent mark sweep